# monkey

./: Cargo.toml  README.md
.github/: test.yml
.github/workflows/: ci.yml  static.yml
ast/: Cargo.toml
ast/src/: lib.rs
code/: Cargo.toml
code/src/: lib.rs  op.rs
compiler/: Cargo.toml
compiler/src/: lib.rs  symbol_table.rs
evaluator/: Cargo.toml
evaluator/src/: builtins.rs  lib.rs
lexer/: Cargo.toml
lexer/src/: helpers.rs  lib.rs
lexer/tests/: tests.rs
monkey/: fibonacci.monkey
monkey_examples/: dynamic_fibonacci.monkey  fibonacci.monkey  loop.monkey  recursive_fibonacci.monkey  reduce.monkey
object/: Cargo.toml
object/src/: builtins.rs  lib.rs
parser/: Cargo.toml
parser/src/: lib.rs
parser/tests/: tests.rs
repl/: Cargo.toml
repl/src/: compile.rs  compile_file.rs  eval.rs  eval_file.rs  lib.rs  main.rs
server/: Cargo.toml
src/: lib.rs  main.rs
src/ast/: mod.rs
src/code/: mod.rs  op.rs
src/compiler/: mod.rs  symbol_table.rs
src/evaluator/: builtins.rs  mod.rs
src/lexer/: lexer.rs  mod.rs
src/object/: builtins.rs  mod.rs
src/parser/: mod.rs
src/repl/: compile.rs  eval.rs  eval_file.rs  mod.rs  repl.rs
src/token/: mod.rs  token.rs
src/vm/: frame.rs  mod.rs
token/: Cargo.toml
token/src/: lib.rs
vm/: Cargo.toml
vm/src/: frame.rs  lib.rs
vm/tests/: vm_integration.rs
wasm/: Cargo.toml  LICENSE  index.html  justfile  main.js  package-lock.json  package.json  tsconfig.json  vite.config.js
wasm/src/: lib.rs
wasm/web/: main.js  worker.js
