[workspace]
members = [
  "ast",
  "code",
  "compiler",
  "evaluator",
  "lexer",
  "object",
  "parser",
  "repl",
  "token",
  "vm",
  "wasm",
]
exclude = []
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Austin Rooks"]
description = "The Monkey language Rust implementation"
repository = "https://github.com/Austionian/monkey"
license = "MIT"
